fixes CSS scrollbar in ui messages

--- a/src/less/style.less
+++ b/src/less/style.less
@@ -9,6 +9,15 @@
     }
 }
 
+.io3d-inspector-plugins___truncate-message {
+    display: inline-block;
+    overflow:hidden;
+    white-space: nowrap;
+    max-width: 365px;
+    text-overflow: ellipsis;
+    margin-bottom: 0;
+}
+
 @import "tab.less";
 @import "plugin-manager.less";
 @import "bake-lightmaps.less";
